--- a/index.html
+++ b/index.html
@@ -256,9 +256,11 @@
           data-sal-delay="100"
           data-sal-easing="ease-out-bounce"
         >
-          <h1>Contacts</h1>
+          <h1 style="padding-bottom: 5%">Contacts</h1>
           <div class="socialMedia">
-            <a href="http://"
+            <a
+              href="https://www.linkedin.com/in/ngechu-mungai-352ba4204"
+              target="_blank"
               ><img src="./images/linkedin.svg" alt="" srcset="" />
               <p>LinkedIn</p></a
             >
