--- a/index.html
+++ b/index.html
@@ -132,7 +132,10 @@
           <h1>My Projects</h1>
           <div class="cardsLayout">
             <div class="card">
-              <a href="">
+              <a
+                href="https://ngechu.github.io/FastFood_Project/"
+                target="_blank"
+              >
                 <img
                   style="height: 200px; width: auto"
                   src="./images/fastfood.png"
