Fix cards width

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
             </div>
             <div class="card" style="opacity: 0.6">
               <img
-                style="height: 200px; width: 380px; margin: 0 auto"
+                style="height: 200px; width: 55vh; margin: 0 auto"
                 src="./images/nodejs-icon.svg"
                 alt="nodejs"
                 srcset=""
